# HumanProof

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  Methodology.md  README.md  sync_data_from_urls.sh
backend/: .env.example  Procfile  generate_demo_data.py  humanproof.db-shm  humanproof.db-wal  load_real_data.py  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/v1/: expression.py  jobs.py  plof.py  router.py  targets.py
backend/app/core/: database.py
backend/app/models/: __init__.py  expression.py  job.py  plof.py
backend/app/schemas/: expression.py  job.py  plof.py  safety.py  sequence.py
backend/app/services/: __init__.py  binding_service.py  sequence_validator.py
data/: export_gene_shap.py  export_shap_all_genes.py  export_shap_dr.py  opentargets_target_prioritisation.parquet  plot_dr_diagnostics.py  plot_paper_figures.py  safety_model.py  safety_model_dr.py  safety_model_viz.py
data/cellxgene/: execution_trace.ipynb
data/demo/: genes.json  tissues.json
data/safety_model_output/dr/: predictions.csv
data/safety_model_output/drugged_only/: predictions_oof.csv  shap_summary.csv  shap_values.npy
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/explore/expression/: page.tsx
frontend/src/app/methodology/: page.tsx
frontend/src/app/pipeline/: page.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/lib/: api-client.ts
frontend/src/types/: api.ts
(+11 files in other folders)
